# cppdev-hw7-bulk

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
